@@ -727,7 +727,8 @@ enum
 #define DCF_RAW_VALUE_OCTET_STRING  ((UINT16)0x0004)
 #define DCF_SHOW_ON_OBJECT_TOOLTIP  ((UINT16)0x0008)
 #define DCF_AGGREGATE_FUNCTION_MASK ((UINT16)0x0070)
-#define DCF_AGGREGATE_FOR_CLUSTER   ((UINT16)0x0080)
+#define DCF_AGGREGATE_ON_CLUSTER    ((UINT16)0x0080)
+#define DCF_TRANSFORM_AGGREGATED    ((UINT16)0x0100)
 
 /**
  * Get cluster aggregation function from DCI flags
