@@ -20,6 +20,7 @@ ClusterOptions_Average=Average
 ClusterOptions_DataAggregation=Data aggregation
 ClusterOptions_Max=Max
 ClusterOptions_Min=Min
+ClusterOptions_RunScriptOnAggregatedData=Run transformation script on aggregated data
 ClusterOptions_Total=Total
 CreateInterfaceDciDialog_BadPollingInterval=Introducir el intervalo entre sondeos como un n\u00famero entero entre 2 y 10000
 CreateInterfaceDciDialog_BadRetentionTime=Introducir el tiempo de conservaci\u00f3n como un n\u00famero entero entre 1 y 10000
