@@ -20,6 +20,7 @@ ClusterOptions_Average=Average
 ClusterOptions_DataAggregation=Data aggregation
 ClusterOptions_Max=Max
 ClusterOptions_Min=Min
+ClusterOptions_RunScriptOnAggregatedData=Run transformation script on aggregated data
 ClusterOptions_Total=Total
 CreateInterfaceDciDialog_BadPollingInterval=Please enter polling pollingInterval as integer in range 2 .. 10000
 CreateInterfaceDciDialog_BadRetentionTime=Please enter retention time as integer in range 1 .. 10000
