@@ -10,6 +10,7 @@
 - DB/2 monitoring subagent
 - Table DCIs can be used in condition objects
 - nxapush can push data on behalf of other nodes
+- Transformation script can be run on aggregated DCIs
 - Management console:
 	- New command line option -fullscreen
 - Fixed issues: #150, #226, #364, #366, #373, #378, #384, #387, #390, $401,
